fix: improve visualisation and y overflow

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,4 +1,5 @@
 body {
+    overflow-y: overlay;
     color: #333333;
 }
 
